[package]
name = "droidwgpu"
version = "0.1.0"
authors = ["mmacedoeu <contato@mmacedo.eu.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.6.0"
smol = "0.4"
async-mutex = "1.2.0"
winit = { git = "https://github.com/rust-windowing/winit" }

[lib]
crate-type = ["cdylib"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.subscriber]
package = "wgpu-subscriber"
version = "0.1"

[target.'cfg(target_os = "android")'.dependencies]
ndk = "0.1.0"
ndk-glue = "0.1.0"
#ndk-glue = { path = "../../___a/android-ndk-rs/ndk-glue" }
#ndk = { path = "../../___a/android-ndk-rs/ndk", features = ["trace"] }